lex-func/y.output
Terminals unused in grammar

    BREAK
    STRING
    PLUS_ASSIGNMENT
    MINUS_ASSIGNMENT
    MULTIPLY_ASSIGNMENT
    DIVIDE_ASSIGNMENT
    MOD_ASSIGNMENT
    POWER_ASSIGNMENT


Grammar

    0 $accept: program $end

    1 program: statements

    2 statements: statements statement
    3           | PRINTF LEFT_PARENTHESIS argument_list RIGHT_PARENTHESIS

    4 statement: function_decl
    5          | assignment
    6          | expression
    7          | control_structure
    8          | RETURN expression
    9          | function_call
   10          | error ';'

   11 function_decl: FUNCTION ID LEFT_PARENTHESIS parameters RIGHT_PARENTHESIS block

   12 parameters: parameter_list
   13           | ε

   14 parameter_list: parameter
   15               | parameter_list COMMA parameter

   16 parameter: ID

   17 block: LEFT_CURLY_BRACKET statements RIGHT_CURLY_BRACKET

   18 assignment: ID ASSIGNMENT expression
   19           | array_access ASSIGNMENT expression

   20 expression: expression PLUS expression
   21           | expression MINUS expression
   22           | expression MULTIPLY expression
   23           | expression DIVIDE expression
   24           | expression MOD expression
   25           | expression POWER expression
   26           | expression EQUAL expression
   27           | expression NOT_EQUAL expression
   28           | expression LESS_THAN expression
   29           | expression GREATER_THAN expression
   30           | expression LESS_THAN_OR_EQUAL expression
   31           | expression GREATER_THAN_OR_EQUAL expression
   32           | expression AND expression
   33           | expression OR expression
   34           | NOT expression
   35           | atom
   36           | error

   37 atom: literal
   38     | variable
   39     | array_access

   40 literal: INTEGER
   41        | FLOAT
   42        | STRING_LITERAL
   43        | TRUE
   44        | FALSE

   45 variable: ID

   46 array_access: ID LEFT_SQUARE_BRACKET expression RIGHT_SQUARE_BRACKET

   47 function_call: ID LEFT_PARENTHESIS argument_list RIGHT_PARENTHESIS

   48 argument_list: arguments
   49              | ε

   50 arguments: expression
   51          | arguments COMMA expression

   52 control_structure: IF expression block
   53                  | IF expression block ELSE block
   54                  | WHILE expression block
   55                  | FOR LEFT_PARENTHESIS INT ID COLON function_call RIGHT_PARENTHESIS block


Terminals, with rules where they appear

    $end (0) 0
    ';' (59) 10
    error (256) 10 36
    FUNCTION (258) 11
    RETURN (259) 8
    BREAK (260)
    IF (261) 52 53
    ELSE (262) 53
    WHILE (263) 54
    FOR (264) 55
    TRUE (265) 43
    FALSE (266) 44
    INT (267) 55
    STRING (268)
    ID <strVal> (269) 11 16 18 45 46 47 55
    STRING_LITERAL <strVal> (270) 42
    INTEGER <intVal> (271) 40
    FLOAT <floatVal> (272) 41
    ASSIGNMENT (273) 18 19
    PLUS (274) 20
    MINUS (275) 21
    MULTIPLY (276) 22
    DIVIDE (277) 23
    MOD (278) 24
    POWER (279) 25
    EQUAL (280) 26
    NOT_EQUAL (281) 27
    LESS_THAN (282) 28
    GREATER_THAN (283) 29
    LESS_THAN_OR_EQUAL (284) 30
    GREATER_THAN_OR_EQUAL (285) 31
    AND (286) 32
    OR (287) 33
    NOT (288) 34
    PLUS_ASSIGNMENT (289)
    MINUS_ASSIGNMENT (290)
    MULTIPLY_ASSIGNMENT (291)
    DIVIDE_ASSIGNMENT (292)
    MOD_ASSIGNMENT (293)
    POWER_ASSIGNMENT (294)
    LEFT_PARENTHESIS (295) 3 11 47 55
    RIGHT_PARENTHESIS (296) 3 11 47 55
    LEFT_CURLY_BRACKET (297) 17
    RIGHT_CURLY_BRACKET (298) 17
    LEFT_SQUARE_BRACKET (299) 46
    RIGHT_SQUARE_BRACKET (300) 46
    COMMA (301) 15 51
    COLON (302) 55
    PRINTF (303) 3


Nonterminals, with rules where they appear

    $accept (50)
        on left: 0
    program (51)
        on left: 1
        on right: 0
    statements (52)
        on left: 2 3
        on right: 1 2 17
    statement (53)
        on left: 4 5 6 7 8 9 10
        on right: 2
    function_decl (54)
        on left: 11
        on right: 4
    parameters (55)
        on left: 12 13
        on right: 11
    parameter_list (56)
        on left: 14 15
        on right: 12 15
    parameter (57)
        on left: 16
        on right: 14 15
    block (58)
        on left: 17
        on right: 11 52 53 54 55
    assignment (59)
        on left: 18 19
        on right: 5
    expression (60)
        on left: 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36
        on right: 6 8 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 46 50 51 52 53 54
    atom (61)
        on left: 37 38 39
        on right: 35
    literal (62)
        on left: 40 41 42 43 44
        on right: 37
    variable (63)
        on left: 45
        on right: 38
    array_access (64)
        on left: 46
        on right: 19 39
    function_call (65)
        on left: 47
        on right: 9 55
    argument_list (66)
        on left: 48 49
        on right: 3 47
    arguments (67)
        on left: 50 51
        on right: 48 51
    control_structure (68)
        on left: 52 53 54 55
        on right: 7


State 0

    0 $accept: • program $end

    PRINTF  shift, and go to state 1

    program     go to state 2
    statements  go to state 3


State 1

    3 statements: PRINTF • LEFT_PARENTHESIS argument_list RIGHT_PARENTHESIS

    LEFT_PARENTHESIS  shift, and go to state 4


State 2

    0 $accept: program • $end

    $end  shift, and go to state 5


State 3

    1 program: statements •
    2 statements: statements • statement

    error           shift, and go to state 6
    FUNCTION        shift, and go to state 7
    RETURN          shift, and go to state 8
    IF              shift, and go to state 9
    WHILE           shift, and go to state 10
    FOR             shift, and go to state 11
    TRUE            shift, and go to state 12
    FALSE           shift, and go to state 13
    ID              shift, and go to state 14
    STRING_LITERAL  shift, and go to state 15
    INTEGER         shift, and go to state 16
    FLOAT           shift, and go to state 17
    NOT             shift, and go to state 18

    $end  reduce using rule 1 (program)

    statement          go to state 19
    function_decl      go to state 20
    assignment         go to state 21
    expression         go to state 22
    atom               go to state 23
    literal            go to state 24
    variable           go to state 25
    array_access       go to state 26
    function_call      go to state 27
    control_structure  go to state 28


State 4

    3 statements: PRINTF LEFT_PARENTHESIS • argument_list RIGHT_PARENTHESIS

    error           shift, and go to state 29
    TRUE            shift, and go to state 12
    FALSE           shift, and go to state 13
    ID              shift, and go to state 30
    STRING_LITERAL  shift, and go to state 15
    INTEGER         shift, and go to state 16
    FLOAT           shift, and go to state 17
    NOT             shift, and go to state 18

    RIGHT_PARENTHESIS  reduce using rule 49 (argument_list)

    expression     go to state 31
    atom           go to state 23
    literal        go to state 24
    variable       go to state 25
    array_access   go to state 32
    argument_list  go to state 33
    arguments      go to state 34


State 5

    0 $accept: program $end •

    $default  accept


State 6

   10 statement: error • ';'
   36 expression: error •

    ';'  shift, and go to state 35

    $default  reduce using rule 36 (expression)


State 7

   11 function_decl: FUNCTION • ID LEFT_PARENTHESIS parameters RIGHT_PARENTHESIS block

    ID  shift, and go to state 36


State 8

    8 statement: RETURN • expression

    error           shift, and go to state 29
    TRUE            shift, and go to state 12
    FALSE           shift, and go to state 13
    ID              shift, and go to state 30
    STRING_LITERAL  shift, and go to state 15
    INTEGER         shift, and go to state 16
    FLOAT           shift, and go to state 17
    NOT             shift, and go to state 18

    expression    go to state 37
    atom          go to state 23
    literal       go to state 24
    variable      go to state 25
    array_access  go to state 32


State 9

   52 control_structure: IF • expression block
   53                  | IF • expression block ELSE block

    error           shift, and go to state 29
    TRUE            shift, and go to state 12
    FALSE           shift, and go to state 13
    ID              shift, and go to state 30
    STRING_LITERAL  shift, and go to state 15
    INTEGER         shift, and go to state 16
    FLOAT           shift, and go to state 17
    NOT             shift, and go to state 18

    expression    go to state 38
    atom          go to state 23
    literal       go to state 24
    variable      go to state 25
    array_access  go to state 32


State 10

   54 control_structure: WHILE • expression block

    error           shift, and go to state 29
    TRUE            shift, and go to state 12
    FALSE           shift, and go to state 13
    ID              shift, and go to state 30
    STRING_LITERAL  shift, and go to state 15
    INTEGER         shift, and go to state 16
    FLOAT           shift, and go to state 17
    NOT             shift, and go to state 18

    expression    go to state 39
    atom          go to state 23
    literal       go to state 24
    variable      go to state 25
    array_access  go to state 32


State 11

   55 control_structure: FOR • LEFT_PARENTHESIS INT ID COLON function_call RIGHT_PARENTHESIS block

    LEFT_PARENTHESIS  shift, and go to state 40


State 12

   43 literal: TRUE •

    $default  reduce using rule 43 (literal)


State 13

   44 literal: FALSE •

    $default  reduce using rule 44 (literal)


State 14

   18 assignment: ID • ASSIGNMENT expression
   45 variable: ID •
   46 array_access: ID • LEFT_SQUARE_BRACKET expression RIGHT_SQUARE_BRACKET
   47 function_call: ID • LEFT_PARENTHESIS argument_list RIGHT_PARENTHESIS

    ASSIGNMENT           shift, and go to state 41
    LEFT_PARENTHESIS     shift, and go to state 42
    LEFT_SQUARE_BRACKET  shift, and go to state 43

    $default  reduce using rule 45 (variable)


State 15

   42 literal: STRING_LITERAL •

    $default  reduce using rule 42 (literal)


State 16

   40 literal: INTEGER •

    $default  reduce using rule 40 (literal)


State 17

   41 literal: FLOAT •

    $default  reduce using rule 41 (literal)


State 18

   34 expression: NOT • expression

    error           shift, and go to state 29
    TRUE            shift, and go to state 12
    FALSE           shift, and go to state 13
    ID              shift, and go to state 30
    STRING_LITERAL  shift, and go to state 15
    INTEGER         shift, and go to state 16
    FLOAT           shift, and go to state 17
    NOT             shift, and go to state 18

    expression    go to state 44
    atom          go to state 23
    literal       go to state 24
    variable      go to state 25
    array_access  go to state 32


State 19

    2 statements: statements statement •

    $default  reduce using rule 2 (statements)


State 20

    4 statement: function_decl •

    $default  reduce using rule 4 (statement)


State 21

    5 statement: assignment •

    $default  reduce using rule 5 (statement)


State 22

    6 statement: expression •
   20 expression: expression • PLUS expression
   21           | expression • MINUS expression
   22           | expression • MULTIPLY expression
   23           | expression • DIVIDE expression
   24           | expression • MOD expression
   25           | expression • POWER expression
   26           | expression • EQUAL expression
   27           | expression • NOT_EQUAL expression
   28           | expression • LESS_THAN expression
   29           | expression • GREATER_THAN expression
   30           | expression • LESS_THAN_OR_EQUAL expression
   31           | expression • GREATER_THAN_OR_EQUAL expression
   32           | expression • AND expression
   33           | expression • OR expression

    PLUS                   shift, and go to state 45
    MINUS                  shift, and go to state 46
    MULTIPLY               shift, and go to state 47
    DIVIDE                 shift, and go to state 48
    MOD                    shift, and go to state 49
    POWER                  shift, and go to state 50
    EQUAL                  shift, and go to state 51
    NOT_EQUAL              shift, and go to state 52
    LESS_THAN              shift, and go to state 53
    GREATER_THAN           shift, and go to state 54
    LESS_THAN_OR_EQUAL     shift, and go to state 55
    GREATER_THAN_OR_EQUAL  shift, and go to state 56
    AND                    shift, and go to state 57
    OR                     shift, and go to state 58

    $default  reduce using rule 6 (statement)


State 23

   35 expression: atom •

    $default  reduce using rule 35 (expression)


State 24

   37 atom: literal •

    $default  reduce using rule 37 (atom)


State 25

   38 atom: variable •

    $default  reduce using rule 38 (atom)


State 26

   19 assignment: array_access • ASSIGNMENT expression
   39 atom: array_access •

    ASSIGNMENT  shift, and go to state 59

    $default  reduce using rule 39 (atom)


State 27

    9 statement: function_call •

    $default  reduce using rule 9 (statement)


State 28

    7 statement: control_structure •

    $default  reduce using rule 7 (statement)


State 29

   36 expression: error •

    $default  reduce using rule 36 (expression)


State 30

   45 variable: ID •
   46 array_access: ID • LEFT_SQUARE_BRACKET expression RIGHT_SQUARE_BRACKET

    LEFT_SQUARE_BRACKET  shift, and go to state 43

    $default  reduce using rule 45 (variable)


State 31

   20 expression: expression • PLUS expression
   21           | expression • MINUS expression
   22           | expression • MULTIPLY expression
   23           | expression • DIVIDE expression
   24           | expression • MOD expression
   25           | expression • POWER expression
   26           | expression • EQUAL expression
   27           | expression • NOT_EQUAL expression
   28           | expression • LESS_THAN expression
   29           | expression • GREATER_THAN expression
   30           | expression • LESS_THAN_OR_EQUAL expression
   31           | expression • GREATER_THAN_OR_EQUAL expression
   32           | expression • AND expression
   33           | expression • OR expression
   50 arguments: expression •

    PLUS                   shift, and go to state 45
    MINUS                  shift, and go to state 46
    MULTIPLY               shift, and go to state 47
    DIVIDE                 shift, and go to state 48
    MOD                    shift, and go to state 49
    POWER                  shift, and go to state 50
    EQUAL                  shift, and go to state 51
    NOT_EQUAL              shift, and go to state 52
    LESS_THAN              shift, and go to state 53
    GREATER_THAN           shift, and go to state 54
    LESS_THAN_OR_EQUAL     shift, and go to state 55
    GREATER_THAN_OR_EQUAL  shift, and go to state 56
    AND                    shift, and go to state 57
    OR                     shift, and go to state 58

    $default  reduce using rule 50 (arguments)


State 32

   39 atom: array_access •

    $default  reduce using rule 39 (atom)


State 33

    3 statements: PRINTF LEFT_PARENTHESIS argument_list • RIGHT_PARENTHESIS

    RIGHT_PARENTHESIS  shift, and go to state 60


State 34

   48 argument_list: arguments •
   51 arguments: arguments • COMMA expression

    COMMA  shift, and go to state 61

    $default  reduce using rule 48 (argument_list)


State 35

   10 statement: error ';' •

    $default  reduce using rule 10 (statement)


State 36

   11 function_decl: FUNCTION ID • LEFT_PARENTHESIS parameters RIGHT_PARENTHESIS block

    LEFT_PARENTHESIS  shift, and go to state 62


State 37

    8 statement: RETURN expression •
   20 expression: expression • PLUS expression
   21           | expression • MINUS expression
   22           | expression • MULTIPLY expression
   23           | expression • DIVIDE expression
   24           | expression • MOD expression
   25           | expression • POWER expression
   26           | expression • EQUAL expression
   27           | expression • NOT_EQUAL expression
   28           | expression • LESS_THAN expression
   29           | expression • GREATER_THAN expression
   30           | expression • LESS_THAN_OR_EQUAL expression
   31           | expression • GREATER_THAN_OR_EQUAL expression
   32           | expression • AND expression
   33           | expression • OR expression

    PLUS                   shift, and go to state 45
    MINUS                  shift, and go to state 46
    MULTIPLY               shift, and go to state 47
    DIVIDE                 shift, and go to state 48
    MOD                    shift, and go to state 49
    POWER                  shift, and go to state 50
    EQUAL                  shift, and go to state 51
    NOT_EQUAL              shift, and go to state 52
    LESS_THAN              shift, and go to state 53
    GREATER_THAN           shift, and go to state 54
    LESS_THAN_OR_EQUAL     shift, and go to state 55
    GREATER_THAN_OR_EQUAL  shift, and go to state 56
    AND                    shift, and go to state 57
    OR                     shift, and go to state 58

    $default  reduce using rule 8 (statement)


State 38

   20 expression: expression • PLUS expression
   21           | expression • MINUS expression
   22           | expression • MULTIPLY expression
   23           | expression • DIVIDE expression
   24           | expression • MOD expression
   25           | expression • POWER expression
   26           | expression • EQUAL expression
   27           | expression • NOT_EQUAL expression
   28           | expression • LESS_THAN expression
   29           | expression • GREATER_THAN expression
   30           | expression • LESS_THAN_OR_EQUAL expression
   31           | expression • GREATER_THAN_OR_EQUAL expression
   32           | expression • AND expression
   33           | expression • OR expression
   52 control_structure: IF expression • block
   53                  | IF expression • block ELSE block

    PLUS                   shift, and go to state 45
    MINUS                  shift, and go to state 46
    MULTIPLY               shift, and go to state 47
    DIVIDE                 shift, and go to state 48
    MOD                    shift, and go to state 49
    POWER                  shift, and go to state 50
    EQUAL                  shift, and go to state 51
    NOT_EQUAL              shift, and go to state 52
    LESS_THAN              shift, and go to state 53
    GREATER_THAN           shift, and go to state 54
    LESS_THAN_OR_EQUAL     shift, and go to state 55
    GREATER_THAN_OR_EQUAL  shift, and go to state 56
    AND                    shift, and go to state 57
    OR                     shift, and go to state 58
    LEFT_CURLY_BRACKET     shift, and go to state 63

    block  go to state 64


State 39

   20 expression: expression • PLUS expression
   21           | expression • MINUS expression
   22           | expression • MULTIPLY expression
   23           | expression • DIVIDE expression
   24           | expression • MOD expression
   25           | expression • POWER expression
   26           | expression • EQUAL expression
   27           | expression • NOT_EQUAL expression
   28           | expression • LESS_THAN expression
   29           | expression • GREATER_THAN expression
   30           | expression • LESS_THAN_OR_EQUAL expression
   31           | expression • GREATER_THAN_OR_EQUAL expression
   32           | expression • AND expression
   33           | expression • OR expression
   54 control_structure: WHILE expression • block

    PLUS                   shift, and go to state 45
    MINUS                  shift, and go to state 46
    MULTIPLY               shift, and go to state 47
    DIVIDE                 shift, and go to state 48
    MOD                    shift, and go to state 49
    POWER                  shift, and go to state 50
    EQUAL                  shift, and go to state 51
    NOT_EQUAL              shift, and go to state 52
    LESS_THAN              shift, and go to state 53
    GREATER_THAN           shift, and go to state 54
    LESS_THAN_OR_EQUAL     shift, and go to state 55
    GREATER_THAN_OR_EQUAL  shift, and go to state 56
    AND                    shift, and go to state 57
    OR                     shift, and go to state 58
    LEFT_CURLY_BRACKET     shift, and go to state 63

    block  go to state 65


State 40

   55 control_structure: FOR LEFT_PARENTHESIS • INT ID COLON function_call RIGHT_PARENTHESIS block

    INT  shift, and go to state 66


State 41

   18 assignment: ID ASSIGNMENT • expression

    error           shift, and go to state 29
    TRUE            shift, and go to state 12
    FALSE           shift, and go to state 13
    ID              shift, and go to state 30
    STRING_LITERAL  shift, and go to state 15
    INTEGER         shift, and go to state 16
    FLOAT           shift, and go to state 17
    NOT             shift, and go to state 18

    expression    go to state 67
    atom          go to state 23
    literal       go to state 24
    variable      go to state 25
    array_access  go to state 32


State 42

   47 function_call: ID LEFT_PARENTHESIS • argument_list RIGHT_PARENTHESIS

    error           shift, and go to state 29
    TRUE            shift, and go to state 12
    FALSE           shift, and go to state 13
    ID              shift, and go to state 30
    STRING_LITERAL  shift, and go to state 15
    INTEGER         shift, and go to state 16
    FLOAT           shift, and go to state 17
    NOT             shift, and go to state 18

    RIGHT_PARENTHESIS  reduce using rule 49 (argument_list)

    expression     go to state 31
    atom           go to state 23
    literal        go to state 24
    variable       go to state 25
    array_access   go to state 32
    argument_list  go to state 68
    arguments      go to state 34


State 43

   46 array_access: ID LEFT_SQUARE_BRACKET • expression RIGHT_SQUARE_BRACKET

    error           shift, and go to state 29
    TRUE            shift, and go to state 12
    FALSE           shift, and go to state 13
    ID              shift, and go to state 30
    STRING_LITERAL  shift, and go to state 15
    INTEGER         shift, and go to state 16
    FLOAT           shift, and go to state 17
    NOT             shift, and go to state 18

    expression    go to state 69
    atom          go to state 23
    literal       go to state 24
    variable      go to state 25
    array_access  go to state 32


State 44

   20 expression: expression • PLUS expression
   21           | expression • MINUS expression
   22           | expression • MULTIPLY expression
   23           | expression • DIVIDE expression
   24           | expression • MOD expression
   25           | expression • POWER expression
   26           | expression • EQUAL expression
   27           | expression • NOT_EQUAL expression
   28           | expression • LESS_THAN expression
   29           | expression • GREATER_THAN expression
   30           | expression • LESS_THAN_OR_EQUAL expression
   31           | expression • GREATER_THAN_OR_EQUAL expression
   32           | expression • AND expression
   33           | expression • OR expression
   34           | NOT expression •

    $default  reduce using rule 34 (expression)


State 45

   20 expression: expression PLUS • expression

    error           shift, and go to state 29
    TRUE            shift, and go to state 12
    FALSE           shift, and go to state 13
    ID              shift, and go to state 30
    STRING_LITERAL  shift, and go to state 15
    INTEGER         shift, and go to state 16
    FLOAT           shift, and go to state 17
    NOT             shift, and go to state 18

    expression    go to state 70
    atom          go to state 23
    literal       go to state 24
    variable      go to state 25
    array_access  go to state 32


State 46

   21 expression: expression MINUS • expression

    error           shift, and go to state 29
    TRUE            shift, and go to state 12
    FALSE           shift, and go to state 13
    ID              shift, and go to state 30
    STRING_LITERAL  shift, and go to state 15
    INTEGER         shift, and go to state 16
    FLOAT           shift, and go to state 17
    NOT             shift, and go to state 18

    expression    go to state 71
    atom          go to state 23
    literal       go to state 24
    variable      go to state 25
    array_access  go to state 32


State 47

   22 expression: expression MULTIPLY • expression

    error           shift, and go to state 29
    TRUE            shift, and go to state 12
    FALSE           shift, and go to state 13
    ID              shift, and go to state 30
    STRING_LITERAL  shift, and go to state 15
    INTEGER         shift, and go to state 16
    FLOAT           shift, and go to state 17
    NOT             shift, and go to state 18

    expression    go to state 72
    atom          go to state 23
    literal       go to state 24
    variable      go to state 25
    array_access  go to state 32


State 48

   23 expression: expression DIVIDE • expression

    error           shift, and go to state 29
    TRUE            shift, and go to state 12
    FALSE           shift, and go to state 13
    ID              shift, and go to state 30
    STRING_LITERAL  shift, and go to state 15
    INTEGER         shift, and go to state 16
    FLOAT           shift, and go to state 17
    NOT             shift, and go to state 18

    expression    go to state 73
    atom          go to state 23
    literal       go to state 24
    variable      go to state 25
    array_access  go to state 32


State 49

   24 expression: expression MOD • expression

    error           shift, and go to state 29
    TRUE            shift, and go to state 12
    FALSE           shift, and go to state 13
    ID              shift, and go to state 30
    STRING_LITERAL  shift, and go to state 15
    INTEGER         shift, and go to state 16
    FLOAT           shift, and go to state 17
    NOT             shift, and go to state 18

    expression    go to state 74
    atom          go to state 23
    literal       go to state 24
    variable      go to state 25
    array_access  go to state 32


State 50

   25 expression: expression POWER • expression

    error           shift, and go to state 29
    TRUE            shift, and go to state 12
    FALSE           shift, and go to state 13
    ID              shift, and go to state 30
    STRING_LITERAL  shift, and go to state 15
    INTEGER         shift, and go to state 16
    FLOAT           shift, and go to state 17
    NOT             shift, and go to state 18

    expression    go to state 75
    atom          go to state 23
    literal       go to state 24
    variable      go to state 25
    array_access  go to state 32


State 51

   26 expression: expression EQUAL • expression

    error           shift, and go to state 29
    TRUE            shift, and go to state 12
    FALSE           shift, and go to state 13
    ID              shift, and go to state 30
    STRING_LITERAL  shift, and go to state 15
    INTEGER         shift, and go to state 16
    FLOAT           shift, and go to state 17
    NOT             shift, and go to state 18

    expression    go to state 76
    atom          go to state 23
    literal       go to state 24
    variable      go to state 25
    array_access  go to state 32


State 52

   27 expression: expression NOT_EQUAL • expression

    error           shift, and go to state 29
    TRUE            shift, and go to state 12
    FALSE           shift, and go to state 13
    ID              shift, and go to state 30
    STRING_LITERAL  shift, and go to state 15
    INTEGER         shift, and go to state 16
    FLOAT           shift, and go to state 17
    NOT             shift, and go to state 18

    expression    go to state 77
    atom          go to state 23
    literal       go to state 24
    variable      go to state 25
    array_access  go to state 32


State 53

   28 expression: expression LESS_THAN • expression

    error           shift, and go to state 29
    TRUE            shift, and go to state 12
    FALSE           shift, and go to state 13
    ID              shift, and go to state 30
    STRING_LITERAL  shift, and go to state 15
    INTEGER         shift, and go to state 16
    FLOAT           shift, and go to state 17
    NOT             shift, and go to state 18

    expression    go to state 78
    atom          go to state 23
    literal       go to state 24
    variable      go to state 25
    array_access  go to state 32


State 54

   29 expression: expression GREATER_THAN • expression

    error           shift, and go to state 29
    TRUE            shift, and go to state 12
    FALSE           shift, and go to state 13
    ID              shift, and go to state 30
    STRING_LITERAL  shift, and go to state 15
    INTEGER         shift, and go to state 16
    FLOAT           shift, and go to state 17
    NOT             shift, and go to state 18

    expression    go to state 79
    atom          go to state 23
    literal       go to state 24
    variable      go to state 25
    array_access  go to state 32


State 55

   30 expression: expression LESS_THAN_OR_EQUAL • expression

    error           shift, and go to state 29
    TRUE            shift, and go to state 12
    FALSE           shift, and go to state 13
    ID              shift, and go to state 30
    STRING_LITERAL  shift, and go to state 15
    INTEGER         shift, and go to state 16
    FLOAT           shift, and go to state 17
    NOT             shift, and go to state 18

    expression    go to state 80
    atom          go to state 23
    literal       go to state 24
    variable      go to state 25
    array_access  go to state 32


State 56

   31 expression: expression GREATER_THAN_OR_EQUAL • expression

    error           shift, and go to state 29
    TRUE            shift, and go to state 12
    FALSE           shift, and go to state 13
    ID              shift, and go to state 30
    STRING_LITERAL  shift, and go to state 15
    INTEGER         shift, and go to state 16
    FLOAT           shift, and go to state 17
    NOT             shift, and go to state 18

    expression    go to state 81
    atom          go to state 23
    literal       go to state 24
    variable      go to state 25
    array_access  go to state 32


State 57

   32 expression: expression AND • expression

    error           shift, and go to state 29
    TRUE            shift, and go to state 12
    FALSE           shift, and go to state 13
    ID              shift, and go to state 30
    STRING_LITERAL  shift, and go to state 15
    INTEGER         shift, and go to state 16
    FLOAT           shift, and go to state 17
    NOT             shift, and go to state 18

    expression    go to state 82
    atom          go to state 23
    literal       go to state 24
    variable      go to state 25
    array_access  go to state 32


State 58

   33 expression: expression OR • expression

    error           shift, and go to state 29
    TRUE            shift, and go to state 12
    FALSE           shift, and go to state 13
    ID              shift, and go to state 30
    STRING_LITERAL  shift, and go to state 15
    INTEGER         shift, and go to state 16
    FLOAT           shift, and go to state 17
    NOT             shift, and go to state 18

    expression    go to state 83
    atom          go to state 23
    literal       go to state 24
    variable      go to state 25
    array_access  go to state 32


State 59

   19 assignment: array_access ASSIGNMENT • expression

    error           shift, and go to state 29
    TRUE            shift, and go to state 12
    FALSE           shift, and go to state 13
    ID              shift, and go to state 30
    STRING_LITERAL  shift, and go to state 15
    INTEGER         shift, and go to state 16
    FLOAT           shift, and go to state 17
    NOT             shift, and go to state 18

    expression    go to state 84
    atom          go to state 23
    literal       go to state 24
    variable      go to state 25
    array_access  go to state 32


State 60

    3 statements: PRINTF LEFT_PARENTHESIS argument_list RIGHT_PARENTHESIS •

    $default  reduce using rule 3 (statements)


State 61

   51 arguments: arguments COMMA • expression

    error           shift, and go to state 29
    TRUE            shift, and go to state 12
    FALSE           shift, and go to state 13
    ID              shift, and go to state 30
    STRING_LITERAL  shift, and go to state 15
    INTEGER         shift, and go to state 16
    FLOAT           shift, and go to state 17
    NOT             shift, and go to state 18

    expression    go to state 85
    atom          go to state 23
    literal       go to state 24
    variable      go to state 25
    array_access  go to state 32


State 62

   11 function_decl: FUNCTION ID LEFT_PARENTHESIS • parameters RIGHT_PARENTHESIS block

    ID  shift, and go to state 86

    $default  reduce using rule 13 (parameters)

    parameters      go to state 87
    parameter_list  go to state 88
    parameter       go to state 89


State 63

   17 block: LEFT_CURLY_BRACKET • statements RIGHT_CURLY_BRACKET

    PRINTF  shift, and go to state 1

    statements  go to state 90


State 64

   52 control_structure: IF expression block •
   53                  | IF expression block • ELSE block

    ELSE  shift, and go to state 91

    $default  reduce using rule 52 (control_structure)


State 65

   54 control_structure: WHILE expression block •

    $default  reduce using rule 54 (control_structure)


State 66

   55 control_structure: FOR LEFT_PARENTHESIS INT • ID COLON function_call RIGHT_PARENTHESIS block

    ID  shift, and go to state 92


State 67

   18 assignment: ID ASSIGNMENT expression •
   20 expression: expression • PLUS expression
   21           | expression • MINUS expression
   22           | expression • MULTIPLY expression
   23           | expression • DIVIDE expression
   24           | expression • MOD expression
   25           | expression • POWER expression
   26           | expression • EQUAL expression
   27           | expression • NOT_EQUAL expression
   28           | expression • LESS_THAN expression
   29           | expression • GREATER_THAN expression
   30           | expression • LESS_THAN_OR_EQUAL expression
   31           | expression • GREATER_THAN_OR_EQUAL expression
   32           | expression • AND expression
   33           | expression • OR expression

    PLUS                   shift, and go to state 45
    MINUS                  shift, and go to state 46
    MULTIPLY               shift, and go to state 47
    DIVIDE                 shift, and go to state 48
    MOD                    shift, and go to state 49
    POWER                  shift, and go to state 50
    EQUAL                  shift, and go to state 51
    NOT_EQUAL              shift, and go to state 52
    LESS_THAN              shift, and go to state 53
    GREATER_THAN           shift, and go to state 54
    LESS_THAN_OR_EQUAL     shift, and go to state 55
    GREATER_THAN_OR_EQUAL  shift, and go to state 56
    AND                    shift, and go to state 57
    OR                     shift, and go to state 58

    $default  reduce using rule 18 (assignment)


State 68

   47 function_call: ID LEFT_PARENTHESIS argument_list • RIGHT_PARENTHESIS

    RIGHT_PARENTHESIS  shift, and go to state 93


State 69

   20 expression: expression • PLUS expression
   21           | expression • MINUS expression
   22           | expression • MULTIPLY expression
   23           | expression • DIVIDE expression
   24           | expression • MOD expression
   25           | expression • POWER expression
   26           | expression • EQUAL expression
   27           | expression • NOT_EQUAL expression
   28           | expression • LESS_THAN expression
   29           | expression • GREATER_THAN expression
   30           | expression • LESS_THAN_OR_EQUAL expression
   31           | expression • GREATER_THAN_OR_EQUAL expression
   32           | expression • AND expression
   33           | expression • OR expression
   46 array_access: ID LEFT_SQUARE_BRACKET expression • RIGHT_SQUARE_BRACKET

    PLUS                   shift, and go to state 45
    MINUS                  shift, and go to state 46
    MULTIPLY               shift, and go to state 47
    DIVIDE                 shift, and go to state 48
    MOD                    shift, and go to state 49
    POWER                  shift, and go to state 50
    EQUAL                  shift, and go to state 51
    NOT_EQUAL              shift, and go to state 52
    LESS_THAN              shift, and go to state 53
    GREATER_THAN           shift, and go to state 54
    LESS_THAN_OR_EQUAL     shift, and go to state 55
    GREATER_THAN_OR_EQUAL  shift, and go to state 56
    AND                    shift, and go to state 57
    OR                     shift, and go to state 58
    RIGHT_SQUARE_BRACKET   shift, and go to state 94


State 70

   20 expression: expression • PLUS expression
   20           | expression PLUS expression •
   21           | expression • MINUS expression
   22           | expression • MULTIPLY expression
   23           | expression • DIVIDE expression
   24           | expression • MOD expression
   25           | expression • POWER expression
   26           | expression • EQUAL expression
   27           | expression • NOT_EQUAL expression
   28           | expression • LESS_THAN expression
   29           | expression • GREATER_THAN expression
   30           | expression • LESS_THAN_OR_EQUAL expression
   31           | expression • GREATER_THAN_OR_EQUAL expression
   32           | expression • AND expression
   33           | expression • OR expression

    MULTIPLY  shift, and go to state 47
    DIVIDE    shift, and go to state 48
    MOD       shift, and go to state 49
    POWER     shift, and go to state 50

    $default  reduce using rule 20 (expression)


State 71

   20 expression: expression • PLUS expression
   21           | expression • MINUS expression
   21           | expression MINUS expression •
   22           | expression • MULTIPLY expression
   23           | expression • DIVIDE expression
   24           | expression • MOD expression
   25           | expression • POWER expression
   26           | expression • EQUAL expression
   27           | expression • NOT_EQUAL expression
   28           | expression • LESS_THAN expression
   29           | expression • GREATER_THAN expression
   30           | expression • LESS_THAN_OR_EQUAL expression
   31           | expression • GREATER_THAN_OR_EQUAL expression
   32           | expression • AND expression
   33           | expression • OR expression

    MULTIPLY  shift, and go to state 47
    DIVIDE    shift, and go to state 48
    MOD       shift, and go to state 49
    POWER     shift, and go to state 50

    $default  reduce using rule 21 (expression)


State 72
